# mischief-in-miniature

./: .gitattributes  .gitignore  Cargo.toml  MILESTONES.md  README.md  book.toml
assets/: character_controller_demo.glb
crates/game/: Cargo.toml
crates/game/assets/: player.blend  player.blend1  player.glb
crates/game/src/: main.rs  pausing.rs
crates/game/src/camera/: mod.rs
crates/game/src/characters/: character_controller.rs  mod.rs
crates/game/src/physics/: character_controller.rs  mod.rs
design/: SUMMARY.md  goals.md  mock_steam_page.md  pitch.md
src/: SUMMARY.md  dragon_rearing.md  examples_common_3d.rs  katamari_monsters.md  main.rs  match_three_engine_builder.md
